tercera version modificacion en las paginas y css

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,16 +60,16 @@
     <footer class="footer">
         <section class="flex">
         <a href="index.html">
-            <img src="../assets/imagenes/mollete (1).png" alt="Logo de muffins de color negro con corazon en el centro" width="5% ">
+            <img src="../assets/imagenes/mollete (1).png" alt="Logo de muffins de color negro con corazon en el centro" width="10% ">
                 </a>
                 <div class="contenido">
         <nav >
             <h4>CONTENIDOS</h4>
         <ul>
-            <li class="cont"><a href="index.html"> Inicio</a></li>
-            <li class="cont"><a href="./pages/galeria.html">Galeria</a></li>
-            <li class="cont"><a href="./pages/contacto.html">Contacto</a></li>
-            <li class="cont"><a href="./pages/carrito.html"><i class="fas fa-cart-plus"></i></a></li>
+            <li class="cont"><a href="../index.html"> Inicio</a></li>
+            <li class="cont"><a href="./galeria.html">Galeria</a></li>
+            <li class="cont"><a href="./contacto.html">Contacto</a></li>
+            <li class="cont"><a href="./carrito.html"><i class="fas fa-cart-plus"></i></a></li>
         </ul>
         </nav>
         </div>
