--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -6,23 +6,42 @@
     <title>Carrito</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/f863acd789.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <header class="header"> 
-        <div class="navegacion">
-        <img src="../assets/imagenes/mollete (1).png" alt="" width="5% ">
-        <nav class="navHeader">
-            <ul class="ulHeader">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./galeria.html">Galeria</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <li><a href="./carrito.html">Carrito</a></li>
-            </ul>
+    <header class="header" id="header">
+        <h1>
+            <span class="nombre_grande">Mat</span>
+            <div class="pasteleria">Pasteleria artesanal hasta tu hogar</div>
+        </h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-ligt-blue  ">
+            <div class="container-fluid ">
+                <a class="navbar-brand"  href="#">
+                    <img src="../assets/imagenes/mollete (1).png" alt="Logo de muffins de color negro con corazon en el centro" width="15% ">
+                        </>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav" >
+                <ul class="navbar-nav ">
+                <li class="nav-item">
+                    <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./galeria.html">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./carrito.html"><i class="fas fa-cart-plus"></i></a>
+                </li>
+                </ul>
+            </div>
+            </div>
         </nav>
-    </div>
-
-    </header>
+        </header>
     <main>
         <h1>Tus Compras</h1>
         <div class="carrito">
@@ -94,5 +113,6 @@
 
 
     </footer>
+    <script src="../js/bootstrap.bundle.min.js"></script>   
 </body>
 </html>
