--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/f863acd789.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
+
 </head>
 <body>
     <header class="header" id="header">
@@ -19,7 +20,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand"  href="#">
                     <img src="../assets/imagenes/mollete (1).png" alt="Logo de muffins de color negro con corazon en el centro" width="15% ">
-                        </>
+                    </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -69,7 +70,7 @@
         </div>
         <div class="formulario">
             <input type="reset" value="Limpiar Formulario">
-            <input type="submit" value="Enviar formulario">
+            <input  type="submit" value="Enviar formulario" id="enviarFormulario">
         </div>
         </form>
     </div>
@@ -141,6 +142,9 @@
 
 </section>
 </footer>
-<script src="../js/bootstrap.bundle.min.js"></script>    
+<script src="../js/bootstrap.bundle.min.js"></script>  
+<script src="../js/index.js"></script>  
+<script src="../js/agregar_carrito.js"></script>
+<script src="../js/mostrar_carrito.js"></script>
 </body>
 </html>
