API clima version 1

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
             </div>
 
         </nav>
+    
         </header>
+        <div id="container" class="container">
+            <button class="mt-5 btn btn-secondary" id="obtenerClima">Mostrar Clima</button>
+            <h6 id="cityName">Ciudad: </h6>
+            <h6 id="temperature">Temperatura: </h6>
+
+        </div>
     
         <main>
             <section>
@@ -191,5 +198,6 @@
     <script src="./js/index.js"></script> 
     <script src="./js/agregar_carrito.js"></script> 
     <script src="./js/mostrar_carrito.js"></script> 
+    <script src="./js/clima.js"></script>
     </body>
 </html>
